# SP-2025

./: CMakeLists.txt
aud1/: hello_world.cpp
aud10/: example.cpp  zad1.cpp  zad10.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp  zad8.cpp  zad9.cpp
aud11/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp
aud12/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp  zad8.cpp
aud13/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp
aud2/: example.cpp  zad1.cpp  zad11.cpp  zad12.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad8.cpp  zad9.cpp
aud3/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp
aud4/: example.cpp  zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp
aud5/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp  zad8.cpp
aud6/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp  zad8.cpp
aud7/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp  zad8.cpp  zad9.cpp
aud8/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp  zad8.cpp
aud9/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp
