cmake_minimum_required(VERSION 3.29)
project(SP_2025)

set(CMAKE_CXX_STANDARD 20)

add_executable(SP_2025 main.cpp)
add_executable(hello_world aud1/hello_world.cpp)
add_executable(example aud2/example.cpp)
add_executable(zad1 aud2/zad1.cpp)
add_executable(zad2 aud2/zad2.cpp)
add_executable(zad3 aud2/zad3.cpp)
add_executable(zad4 aud2/zad4.cpp)
add_executable(zad5 aud2/zad5.cpp)
add_executable(zad8 aud2/zad8.cpp)
add_executable(zad9 aud2/zad9.cpp)
add_executable(zad11 aud2/zad11.cpp)
add_executable(zad12 aud2/zad12.cpp)

add_executable(zad31 aud3/zad1.cpp)
add_executable(zad32 aud3/zad2.cpp)
add_executable(zad33 aud3/zad3.cpp)
add_executable(zad34 aud3/zad4.cpp)
add_executable(zad35 aud3/zad5.cpp)
add_executable(zad36 aud3/zad6.cpp)

add_executable(zad4ex aud4/example.cpp)
add_executable(zad41 aud4/zad1.cpp)
add_executable(zad42 aud4/zad2.cpp)
add_executable(zad43 aud4/zad3.cpp)
add_executable(zad44 aud4/zad4.cpp)

add_executable(zad51 aud5/zad1.cpp)
add_executable(zad52 aud5/zad2.cpp)
add_executable(zad53 aud5/zad3.cpp)
add_executable(zad54 aud5/zad4.cpp)
add_executable(zad55 aud5/zad5.cpp)
add_executable(zad56 aud5/zad6.cpp)
add_executable(zad57 aud5/zad7.cpp)
add_executable(zad58 aud5/zad8.cpp)