cmake_minimum_required(VERSION 3.29)
project(SP_2025)

set(CMAKE_CXX_STANDARD 20)

add_executable(SP_2025 main.cpp)
add_executable(hello_world aud1/hello_world.cpp)
add_executable(example aud2/example.cpp)
add_executable(zad1 aud2/zad1.cpp)
add_executable(zad2 aud2/zad2.cpp)
add_executable(zad3 aud2/zad3.cpp)
add_executable(zad4 aud2/zad4.cpp)
add_executable(zad5 aud2/zad5.cpp)
add_executable(zad8 aud2/zad8.cpp)
add_executable(zad9 aud2/zad9.cpp)
add_executable(zad11 aud2/zad11.cpp)
add_executable(zad12 aud2/zad12.cpp)

add_executable(zad31 aud3/zad1.cpp)
add_executable(zad32 aud3/zad2.cpp)
add_executable(zad33 aud3/zad3.cpp)
add_executable(zad34 aud3/zad4.cpp)
add_executable(zad35 aud3/zad5.cpp)
add_executable(zad36 aud3/zad6.cpp)

add_executable(zad4ex aud4/example.cpp)
add_executable(zad41 aud4/zad1.cpp)
add_executable(zad42 aud4/zad2.cpp)
add_executable(zad43 aud4/zad3.cpp)
add_executable(zad44 aud4/zad4.cpp)

add_executable(zad51 aud5/zad1.cpp)
add_executable(zad52 aud5/zad2.cpp)
add_executable(zad53 aud5/zad3.cpp)
add_executable(zad54 aud5/zad4.cpp)
add_executable(zad55 aud5/zad5.cpp)
add_executable(zad56 aud5/zad6.cpp)
add_executable(zad57 aud5/zad7.cpp)
add_executable(zad58 aud5/zad8.cpp)

add_executable(zad61 aud6/zad1.cpp)
add_executable(zad62 aud6/zad2.cpp)
add_executable(zad63 aud6/zad3.cpp)
add_executable(zad64 aud6/zad4.cpp)
add_executable(zad65 aud6/zad5.cpp)
add_executable(zad66 aud6/zad6.cpp)
add_executable(zad67 aud6/zad7.cpp)
add_executable(zad68 aud6/zad8.cpp)

add_executable(zad71 aud7/zad1.cpp)
add_executable(zad72 aud7/zad2.cpp)
add_executable(zad73 aud7/zad3.cpp)
add_executable(zad74 aud7/zad4.cpp)
add_executable(zad75 aud7/zad5.cpp)
add_executable(zad76 aud7/zad6.cpp)
add_executable(zad77 aud7/zad7.cpp)
add_executable(zad78 aud7/zad8.cpp)
add_executable(zad79 aud7/zad9.cpp)

add_executable(zad81 aud8/zad1.cpp)
add_executable(zad82 aud8/zad2.cpp)
add_executable(zad83 aud8/zad3.cpp)
add_executable(zad84 aud8/zad4.cpp)
add_executable(zad85 aud8/zad5.cpp)
add_executable(zad86 aud8/zad6.cpp)
add_executable(zad87 aud8/zad7.cpp)
add_executable(zad88 aud8/zad8.cpp)

add_executable(zad91 aud9/zad1.cpp)
add_executable(zad92 aud9/zad2.cpp)
add_executable(zad93 aud9/zad3.cpp)
add_executable(zad94 aud9/zad4.cpp)
add_executable(zad95 aud9/zad5.cpp)

add_executable(zad101 aud10/zad1.cpp)
add_executable(zad102 aud10/zad2.cpp)
add_executable(zad103 aud10/zad3.cpp)
add_executable(zad104 aud10/zad4.cpp)
add_executable(zad105 aud10/zad5.cpp)
add_executable(zad106 aud10/zad6.cpp)
add_executable(zad107 aud10/zad7.cpp)
add_executable(zad108 aud10/zad8.cpp)
add_executable(zad109 aud10/zad9.cpp)
add_executable(zad110 aud10/zad10.cpp)
add_executable(zad10example aud10/example.cpp)

add_executable(zad111 aud11/zad1.cpp)
add_executable(zad112 aud11/zad2.cpp)
add_executable(zad113 aud11/zad3.cpp)
add_executable(zad114 aud11/zad4.cpp)
add_executable(zad115 aud11/zad5.cpp)
add_executable(zad116 aud11/zad6.cpp)

add_executable(zad121 aud12/zad1.cpp)
add_executable(zad122 aud12/zad2.cpp)
add_executable(zad123 aud12/zad3.cpp)
add_executable(zad124 aud12/zad4.cpp)
add_executable(zad125 aud12/zad5.cpp)
add_executable(zad126 aud12/zad6.cpp)
add_executable(zad127 aud12/zad7.cpp)
add_executable(zad128 aud12/zad8.cpp)

add_executable(zad131 aud13/zad1.cpp)
add_executable(zad132 aud13/zad2.cpp)
add_executable(zad133 aud13/zad3.cpp)
add_executable(zad134 aud13/zad4.cpp)
add_executable(zad135 aud13/zad5.cpp)